# Stock-pro

./: Dear_user.py  Pasted--Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can--1727718160814.txt  Pasted--Collecting-usage-statistics-To-deactivate-set-browser-gatherUsageStats-to-false-You-can--1727719888248.txt  Pasted--Debug-Initial-stock-symbol-input-Debug-Randomly-selected-stock-symbol-AAPL-Debug-Fetching--1727665373357.txt  Pasted-Error-creating-chart-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Scatter-incr-1727529468916.txt  Pasted-The-error-you-re-encountering-indicates-that-the-FRED-API-key-being-used-is-invalid-Error-f-1727594892914.txt  Pasted-This-happens-because-the-api-key-variable-you-re-passing-to-the-Fred-class-is-either-None-or-not-the-1727594051641.txt  database.py  economic_data.py  main.py  news_scraper.py  pyproject.toml  sentiment_analysis.py  stock_data.py  utils.py
.streamlit/: config.toml  secrets.toml
