[tool.poetry]
name = "repl-nix-stocktrackerpro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
yfinance = "^0.2.43"
pandas = "^2.2.3"
plotly = "^5.24.1"
numpy = "^2.1.1"
fredapi = "^0.5.2"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
